--- a/MyViewAndViews/app/src/main/res/layout/activity_main.xml
+++ b/MyViewAndViews/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,18 @@
         </FrameLayout>
 
         <TextView
+            style="@style/TextContent.Black"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/dummy_value"
+            android:textSize="32sp" />
+
+        <TextView
+            style="@style/TextContent.Subtitle"
+
+
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
