--- a/Submission/app/src/main/res/layout/scroll_item.xml
+++ b/Submission/app/src/main/res/layout/scroll_item.xml
@@ -27,14 +27,16 @@
             android:layout_marginBottom="8dp"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:text="@string/title" />
+            tools:text="@string/title"
+            android:textColor="#03DAC5"/>
         <TextView
             android:id="@+id/item_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="2"
-            tools:text="@string/desc" />
+            tools:text="@string/desc"
+            android:textColor="#FFFFFF"/>
     </LinearLayout>
 
 </RelativeLayout>
